# RetailForecast.ML

./: AGENTS.md  main.py  predict.py  pyproject.toml
DTOs/: TrainingRunCallbackRequest.py  TrainingRunRequest.py  TrainingRunResponse.py
app/: config.py
app/api/: main.py  training_runs.py
app/application/: training_runs.py
app/data/: loaders.py  preparation.py
app/infrastructure/: callbacks.py  datasets.py
app/ml/: baselines.py  features.py  metrics.py  models.py  regression_pipeline.py  small_data_pipeline.py
models/: Metric.py  Model.py
tests/: test_baseline_metrics.py  test_ml.py  test_preparation.py
